# murmurhash3-rs

./: .travis.yml  CHANGELOG.rst  Cargo.toml
src/: bench.rs  hasher.rs  lib.rs  mmh3_128.rs  mmh3_32.rs
