[package]

name = "murmurhash3"
version = "0.0.1"
authors = ["mhallin <mhallin@gmail.com>"]
description = "MurmurHash3 implementation"
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/mhallin/murmurhash3-rs"

[lib]
name = "murmurhash3"
path = "src/lib.rs"

[[bin]]
name = "murmurhash3-bench"
path = "src/bench.rs"


[profile.test]
opt-level = 3

[profile.release]
debug = true
opt-level = 3
